<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/ActivityBackgroundStyle"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/shape_rounded_container"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/onboardRegisterBtn"
            style="@style/TitleTextStyle" />

        <EditText
            android:id="@+id/etName"
            android:autofillHints="name"
            android:hint="@string/your_name"
            android:inputType="text"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginHorizontal="20dp"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/etAge"
            android:autofillHints="username"
            android:hint="@string/your_age"
            android:inputType="number"
            android:layout_marginHorizontal="20dp"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/etSignUpEmail"
            android:autofillHints="emailAddress"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginHorizontal="20dp"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/etSignUpPassword"
            android:autofillHints="password"
            android:hint="@string/your_password"
            android:layout_marginHorizontal="20dp"
            android:inputType="textPassword"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/etSignUpPassword2"
            android:autofillHints="password"
            android:hint="@string/confirm_password"
            android:layout_marginHorizontal="20dp"
            android:inputType="textPassword"
            style="@style/EditTextStyle"/>

        <Button
            android:id="@+id/btnSignUp"
            style="@style/OnboardButtonStyle"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/onboardRegisterBtn"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>