<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/onboardBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardActivity">

    <ImageView
        android:id="@+id/ivMainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/house_of_dragon_image"
        android:layout_marginTop="70dp"
        android:src="@drawable/house_targaryen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_rounded_container"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboardTitle"
            style="@style/TitleTextStyle"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/btnOnboardSignIn"
            android:layout_marginTop="16dp"
            style="@style/OnboardButtonStyle"
            android:text="@string/onboardEnterBtn" />

        <Button
            android:id="@+id/btnOnboardSignUp"
            android:layout_marginTop="4dp"
            style="@style/OnboardButtonStyle"
            android:text="@string/onboardRegisterBtn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>