<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/onboardBack"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/settings_title"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llInputFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_rounded_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSettings">

            <TextView
                android:id="@+id/tvBackupFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/backup_file_name"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/backup_filename_input_layout"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:layout_marginBottom="16dp"
                android:hint="@string/enter_backup_filename"
                app:helperTextTextColor="@color/white"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/backup_filename_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textColor="@color/white"
                    android:text="@string/backup_characters_txt" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/backup_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_rounded_container"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llInputFileName">

            <TextView
                android:id="@+id/tvBackupStatusTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/backup_status"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/tvBackupStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/backup_not_found"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvBackupFilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="Имя: starks.txt" />

            <TextView
                android:id="@+id/tvBackupSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="Размер: 56 KB" />

            <Button
                android:id="@+id/btn_delete_file"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/delete_file_btn"
                android:textColor="#F44336"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_restore_backup"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/recover_file"
                android:textColor="#4CAF50"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/backup_internal_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_rounded_container"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backup_info_container">

            <TextView
                android:id="@+id/tvInternalBackupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/internal_backup_status"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/tvInternalBackupStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp"
                android:text="@string/internal_backup_not_saved"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_rounded_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backup_internal_info_container">

            <TextView
                android:id="@+id/tvNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/notifications"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow_notifications"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:checked="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_rounded_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llNotifications">

            <TextView
                android:id="@+id/tvTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/tv_theme"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <RadioGroup
                android:id="@+id/theme_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/light_theme_radio"
                    style="@style/RadioButtonStyle"
                    android:text="@string/light_theme_text" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/dark_theme_radio"
                    style="@style/RadioButtonStyle"
                    android:checked="true"
                    android:text="@string/dark_theme_text" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_rounded_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llTheme"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/app_language"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <RadioGroup
                android:id="@+id/language_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/ru_lang_radio"
                    style="@style/RadioButtonStyle"
                    android:text="@string/russian" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/en_lang_radio"
                    style="@style/RadioButtonStyle"
                    android:checked="true"
                    android:text="@string/english" />
            </RadioGroup>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>