<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/onboardBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.HomeFragment">

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="20dp"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/settings_button"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGreatHouses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/great_houses"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSettings" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="-110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreatHouses">

        <LinearLayout
            android:id="@+id/llHouse1"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/stark" />

            <TextView
                style="@style/HousesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/house_stark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHouse2"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/lannister" />

            <TextView
                style="@style/HousesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/house_lannister" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHouse3"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/baratheon" />

            <TextView
                style="@style/HousesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/house_baratheon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHouse4"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/targaryen" />

            <TextView
                style="@style/HousesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/house_targaryen" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/userEmailOnboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginEnd="20dp"
        tools:text="Hello bro"/>

</androidx.constraintlayout.widget.ConstraintLayout>